# TallerEstructura2

./: .gitignore  CMakeLists.txt  README.md
src/data/: Bodega.txt  clientes.txt  clientes_guardados.txt
src/include/: HashMap.h  Producto.h  clienteGeneral.h  clienteNormal.h  clientePreferencial.h
src/src/: HashMap.cpp  Producto.cpp  clienteGeneral.cpp  clienteNormal.cpp  clientePreferencial.cpp  main.cpp
